cmake_minimum_required(VERSION 3.15)
project(2048_with_sfml)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES main.cpp)


add_executable(2048_with_sfml ${SOURCE_FILES})
include_directories(/usr/local/include)

find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
include_directories(${SFML_INCLUDE_DIRS})
target_link_libraries(2048_with_sfml sfml-system sfml-window sfml-graphics sfml-audio sfml-network)